third_party/move/move-compiler-v2/tests/more-v1/expansion/pack_no_fields_single_block_other_expr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/pack_no_fields_single_block_other_expr.move:6:19
  │
6 │         let s = S 0;
  │                   ^
  │                   │
  │                   Unexpected '0'
  │                   Expected ';'
